# weblabs

./: .gitignore
lab1/: pyproject.toml
lab1/src/webapp/controllers/: info.py
lab1/src/webapp/models/: data.json
lab1/src/webapp/views/: about.html  article.html  index.html  privacy.html
lab2/: Dockerfile  docker-compose.yml  pyproject.toml
lab2/src/webapp/: __init__.py  main.py
lab2/src/webapp/controllers/: article.py
lab2/src/webapp/models/: article.py  data.json
