[project]
name = "webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "andiserg", email = "sergienkoandrew9922@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.15.0",
    "jinja2>=3.0.3",
    "python-multipart>=0.0.5",
]

[tool.setuptools.package-data]
webapp = [
    "models/data.json",
    "views/*",
]

[project.scripts]
webapp = "webapp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
